fixed input box overflow

--- a/CSS/login.css
+++ b/CSS/login.css
@@ -12,16 +12,16 @@
 .info-entry {
   position: relative;
   padding: 10px 20px;
-  overflow: auto;
+
 }
 
 .input-fancy {
-  padding: 8px;
-  padding-left: 40px;
+  padding: 8px 8px 8px 40px;
   border: 1px solid #aaa;
   font-size: 16px;
   border-radius: 5px;
   -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -31,7 +31,7 @@
 
 .input-icon {
   position: absolute;
-  top: 21px;
+  top: 37%;
   padding-left: 7px;
   color: #aaa;
 }
@@ -68,9 +68,13 @@
   width: 70px; }
 
 /*input:focus {
-  /* border:0px rgb(241, 147, 22);
+  /* border:0px rgb(241, 147, 22); 
   background-color: #ccc7ec; }*/
 
 @media screen and (max-width: 590px) {
   .login {
-    width: 80%; } }
+    width: 80%; }
+
+  .input-fancy {
+    width: 80%;}
+  }
